5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1674_1105.log
== TEST (2019-04-30 11:44:35) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("Brasao:")

print("Entrada:", a)

if (a == "lobo".lower()):
	print("Casa: Stark")
elif (a == "leao".lower()):
	print("Casa: Lannister")
elif (a == "veado".lower()):
	print("Casa: Baratheon")
elif (a == "dragao".lower()):
	print("Casa: Targaryen")
elif (a== "rosa".lower()):
	print("Casa: Tyrell")
elif (a == "sol".lower()):
	print("Casa: Martell")
elif (a == "lula".lower()):
	print("Casa: Greyjoy")
elif (a == "esfolado".lower()):
	print("Casa: Bolton")
elif (a == "turta".lower()):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:44:45) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("Brasao:")

print("Entrada:", a)

if (a == "lobo".lower()):
	print("Casa: Stark")
elif (a == "leao".lower()):
	print("Casa: Lannister")
elif (a == "veado".lower()):
	print("Casa: Baratheon")
elif (a == "dragao".lower()):
	print("Casa: Targaryen")
elif (a== "rosa".lower()):
	print("Casa: Tyrell")
elif (a == "sol".lower()):
	print("Casa: Martell")
elif (a == "lula".lower()):
	print("Casa: Greyjoy")
elif (a == "esfolado".lower()):
	print("Casa: Bolton")
elif (a == "turta".lower()):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:44:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("Brasao:")

print("Entrada:", a)

if (a == "lobo".lower()):
	print("Casa: Stark")
elif (a == "leao".lower()):
	print("Casa: Lannister")
elif (a == "veado".lower()):
	print("Casa: Baratheon")
elif (a == "dragao".lower()):
	print("Casa: Targaryen")
elif (a== "rosa".lower()):
	print("Casa: Tyrell")
elif (a == "sol".lower()):
	print("Casa: Martell")
elif (a == "lula".lower()):
	print("Casa: Greyjoy")
elif (a == "esfolado".lower()):
	print("Casa: Bolton")
elif (a == "turta".lower()):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:44:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("Brasao:")

print("Entrada:", a)

if (a == "lobo".lower()):
	print("Casa: Stark")
elif (a == "leao".lower()):
	print("Casa: Lannister")
elif (a == "veado".lower()):
	print("Casa: Baratheon")
elif (a == "dragao".lower()):
	print("Casa: Targaryen")
elif (a== "rosa".lower()):
	print("Casa: Tyrell")
elif (a == "sol".lower()):
	print("Casa: Martell")
elif (a == "lula".lower()):
	print("Casa: Greyjoy")
elif (a == "esfolado".lower()):
	print("Casa: Bolton")
elif (a == "turta".lower()):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:44:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("Brasao:")

print("Entrada:", a)

if (a == "lobo".lower()):
	print("Casa: Stark")
elif (a == "leao".lower()):
	print("Casa: Lannister")
elif (a == "veado".lower()):
	print("Casa: Baratheon")
elif (a == "dragao".lower()):
	print("Casa: Targaryen")
elif (a== "rosa".lower()):
	print("Casa: Tyrell")
elif (a == "sol".lower()):
	print("Casa: Martell")
elif (a == "lula".lower()):
	print("Casa: Greyjoy")
elif (a == "esfolado".lower()):
	print("Casa: Bolton")
elif (a == "turta".lower()):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.13478
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("Brasao:")

print("Entrada:", a)

if (a == "lobo".lower()):
	print("Casa: Stark")
elif (a == "leao".lower()):
	print("Casa: Lannister")
elif (a == "veado".lower()):
	print("Casa: Baratheon")
elif (a == "dragao".lower()):
	print("Casa: Targaryen")
elif (a== "rosa".lower()):
	print("Casa: Tyrell")
elif (a == "sol".lower()):
	print("Casa: Martell")
elif (a == "lula".lower()):
	print("Casa: Greyjoy")
elif (a == "esfolado".lower()):
	print("Casa: Bolton")
elif (a == "turta".lower()):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("Brasao:")

print("Entrada:", a)

if (a == "lobo".lower()):
	print("Casa: Stark")
elif (a == "leao".lower()):
	print("Casa: Lannister")
elif (a == "veado".lower()):
	print("Casa: Baratheon")
elif (a == "dragao".lower()):
	print("Casa: Targaryen")
elif (a== "rosa".lower()):
	print("Casa: Tyrell")
elif (a == "sol".lower()):
	print("Casa: Martell")
elif (a == "lula".lower()):
	print("Casa: Greyjoy")
elif (a == "esfolado".lower()):
	print("Casa: Bolton")
elif (a == "turta".lower()):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:46:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("Brasao:")

print("Entrada:", a)

if (a == ("lobo".lower()):
	print("Casa: Stark")
elif (a == "leao".lower()):
	print("Casa: Lannister")
elif (a == "veado".lower()):
	print("Casa: Baratheon")
elif (a == "dragao".lower()):
	print("Casa: Targaryen")
elif (a== "rosa".lower()):
	print("Casa: Tyrell")
elif (a == "sol".lower()):
	print("Casa: Martell")
elif (a == "lula".lower()):
	print("Casa: Greyjoy")
elif (a == "esfolado".lower()):
	print("Casa: Bolton")
elif (a == "turta".lower()):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 8
    if (a == ("lobo".lower()):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:46:15) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("Brasao:")

print("Entrada:", a)

if (a == "lobo".lower():
	print("Casa: Stark")
elif (a == "leao".lower()):
	print("Casa: Lannister")
elif (a == "veado".lower()):
	print("Casa: Baratheon")
elif (a == "dragao".lower()):
	print("Casa: Targaryen")
elif (a== "rosa".lower()):
	print("Casa: Tyrell")
elif (a == "sol".lower()):
	print("Casa: Martell")
elif (a == "lula".lower()):
	print("Casa: Greyjoy")
elif (a == "esfolado".lower()):
	print("Casa: Bolton")
elif (a == "turta".lower()):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 8
    if (a == "lobo".lower():
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:46:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("Brasao:")

print("Entrada:", a)

if (a == "lobo".lower()):
	print("Casa: Stark")
elif (a == "leao".lower()):
	print("Casa: Lannister")
elif (a == "veado".lower()):
	print("Casa: Baratheon")
elif (a == "dragao".lower()):
	print("Casa: Targaryen")
elif (a== "rosa".lower()):
	print("Casa: Tyrell")
elif (a == "sol".lower()):
	print("Casa: Martell")
elif (a == "lula".lower()):
	print("Casa: Greyjoy")
elif (a == "esfolado".lower()):
	print("Casa: Bolton")
elif (a == "turta".lower()):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:46:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("Brasao:")

print("Entrada:", a)

if (a == ("lobo".lower())):
	print("Casa: Stark")
elif (a == "leao".lower()):
	print("Casa: Lannister")
elif (a == "veado".lower()):
	print("Casa: Baratheon")
elif (a == "dragao".lower()):
	print("Casa: Targaryen")
elif (a== "rosa".lower()):
	print("Casa: Tyrell")
elif (a == "sol".lower()):
	print("Casa: Martell")
elif (a == "lula".lower()):
	print("Casa: Greyjoy")
elif (a == "esfolado".lower()):
	print("Casa: Bolton")
elif (a == "turta".lower()):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:46:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("Brasao:")

print("Entrada:", a)

if (a == "lobo".lower()):
	print("Casa: Stark")
elif (a == "leao".lower()):
	print("Casa: Lannister")
elif (a == "veado".lower()):
	print("Casa: Baratheon")
elif (a == "dragao".lower()):
	print("Casa: Targaryen")
elif (a== "rosa".lower()):
	print("Casa: Tyrell")
elif (a == "sol".lower()):
	print("Casa: Martell")
elif (a == "lula".lower()):
	print("Casa: Greyjoy")
elif (a == "esfolado".lower()):
	print("Casa: Bolton")
elif (a == "turta".lower()):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:46:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("Brasao:")

print("Entrada:", a)

if (a == "lobo".lower()):
	print("Casa: Stark")
elif (a == "leao".lower()):
	print("Casa: Lannister")
elif (a == "veado".lower()):
	print("Casa: Baratheon")
elif (a == "dragao".lower()):
	print("Casa: Targaryen")
elif (a== "rosa".lower()):
	print("Casa: Tyrell")
elif (a == "sol".lower()):
	print("Casa: Martell")
elif (a == "lula".lower()):
	print("Casa: Greyjoy")
elif (a == "esfolado".lower()):
	print("Casa: Bolton")
elif (a == "turta".lower()):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:47:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("Brasao:")

print("Entrada:", a)

if (a == ("lobo").lower()):
	print("Casa: Stark")
elif (a == "leao".lower()):
	print("Casa: Lannister")
elif (a == "veado".lower()):
	print("Casa: Baratheon")
elif (a == "dragao".lower()):
	print("Casa: Targaryen")
elif (a== "rosa".lower()):
	print("Casa: Tyrell")
elif (a == "sol".lower()):
	print("Casa: Martell")
elif (a == "lula".lower()):
	print("Casa: Greyjoy")
elif (a == "esfolado".lower()):
	print("Casa: Bolton")
elif (a == "turta".lower()):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:47:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("Brasao:")

print("Entrada:", a)

if (a == ("lobo").lower()):
	print("Casa: Stark")
elif (a == "leao".lower()):
	print("Casa: Lannister")
elif (a == "veado".lower()):
	print("Casa: Baratheon")
elif (a == "dragao".lower()):
	print("Casa: Targaryen")
elif (a== "rosa".lower()):
	print("Casa: Tyrell")
elif (a == "sol".lower()):
	print("Casa: Martell")
elif (a == "lula".lower()):
	print("Casa: Greyjoy")
elif (a == "esfolado".lower()):
	print("Casa: Bolton")
elif (a == "turta".lower()):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
